# MaxNet

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  main.py
assets/test/RAW/: to_RGB.py
assets/test/RAW/ari/: F5K518aW0AAnFCB.rgb  _101880714_getty.meta.json  _101880714_getty.rgb  acb2f744-bd35-11ed-926f-0210609a3fe2.meta.json  acb2f744-bd35-11ed-926f-0210609a3fe2.rgb  ariana-grande-1.meta.json  ariana-grande-1.rgb  ariana-grande-smile-cosmetic-dentist.meta.json  ariana-grande-smile-cosmetic-dentist.rgb  pYAktkuTURBXy9jZjlmZDhhYy1jOTdlLTRiMzMtYjM2Zi0wZmI2MDFkNmI1OTEuanBlZ5GVAs0H0ADCww.meta.json  pYAktkuTURBXy9jZjlmZDhhYy1jOTdlLTRiMzMtYjM2Zi0wZmI2MDFkNmI1OTEuanBlZ5GVAs0H0ADCww.rgb
assets/test/RAW/max/: 2208607314.5.rgb  dims.apnews.meta.json  dims.apnews.rgb  images.rgb  max-verstappen-red-bull-racing.meta.json  max-verstappen-red-bull-racing.rgb
core/DataLoader/: CMakeLists.txt  DataLoader.cpp  DataLoader.h
core/NeuralNet/: CMakeLists.txt  NeuralNet.cpp  NeuralNet.h
core/Tensor/: CMakeLists.txt  Tensor.cpp  Tensor.h
